# collab-be-svc

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
app/: database.py  main.py
app/api/auth/: brand_auth.py
app/api/campaign/: campaign.py
app/auth/: brand_auth.py
app/middlewear/: auth_middleware.py
app/models/: brand_users_model.py  campaign.py
app/repositories/: campaign_repository.py  user_repository.py
app/schemas/: brand_users_schema.py  campaign.py
app/services/: brand_auth_service.py  campaign_service.py
